docs-archive/apache-airflow-providers-standard/1.8.0/_sources/_api/airflow/providers/standard/triggers/hitl/index.rst.txt
airflow.providers.standard.triggers.hitl
========================================

.. py:module:: airflow.providers.standard.triggers.hitl


Classes
-------

.. autoapisummary::

   airflow.providers.standard.triggers.hitl.HITLTriggerEventSuccessPayload
   airflow.providers.standard.triggers.hitl.HITLTriggerEventFailurePayload
   airflow.providers.standard.triggers.hitl.HITLTrigger


Module Contents
---------------

.. py:class:: HITLTriggerEventSuccessPayload

   Bases: :py:obj:`TypedDict`


   Minimum required keys for a success Human-in-the-loop TriggerEvent.


   .. py:attribute:: chosen_options
      :type:  list[str]


   .. py:attribute:: params_input
      :type:  dict[str, Any]


   .. py:attribute:: responded_by_user
      :type:  airflow.sdk.execution_time.hitl.HITLUser | None


   .. py:attribute:: responded_at
      :type:  datetime.datetime


   .. py:attribute:: timedout
      :type:  bool


.. py:class:: HITLTriggerEventFailurePayload

   Bases: :py:obj:`TypedDict`


   Minimum required keys for a failed Human-in-the-loop TriggerEvent.


   .. py:attribute:: error
      :type:  str


   .. py:attribute:: error_type
      :type:  Literal['timeout', 'unknown']


.. py:class:: HITLTrigger(*, ti_id, options, params, defaults = None, multiple = False, timeout_datetime, poke_interval = 5.0, **kwargs)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   A trigger that checks whether Human-in-the-loop responses are received.


   .. py:attribute:: ti_id


   .. py:attribute:: poke_interval
      :value: 5.0



   .. py:attribute:: options


   .. py:attribute:: multiple
      :value: False



   .. py:attribute:: defaults
      :value: None



   .. py:attribute:: timeout_datetime


   .. py:attribute:: params


   .. py:method:: serialize()

      Serialize HITLTrigger arguments and classpath.



   .. py:method:: run()
      :async:


      Loop until the Human-in-the-loop response received or timeout reached.



